--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -9,8 +9,7 @@ tags: [Authority, Model]
 
 ## Notes
 
-###权限实现
-
+###2013-06-04 权限实现
     数据模型不是关键，只要保存用户-权限关系就行了
     设计上的关键是找到权限控制点
     界面级：自定义标签可以实现
@@ -35,8 +34,15 @@ tags: [Authority, Model]
     1.功能权限-系统菜单，页面功能操作点
     2.数据权限-业务数据范围权限
     3.管理权限-管理功能权限和数据权限的权限
+    
+![1.jpg]({{ site.img_url }}/2013-06-04-01.jpg)
+(Read more:<http://www.iteye.com/topic/1112957>)
 
-###Brain Function
-
+###2013-06-04 Brain Function
     Focus, Speed, Attention, Memory, Flexibility
+
+###2013-06-06
+    使用jcrop+springmvc实现头像上传与裁剪功能
+
+
 
