--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -44,5 +44,9 @@ tags: [Authority, Model]
 ###2013-06-06
     使用jcrop+springmvc实现头像上传与裁剪功能
 
-
+###2013-07-06
+    Feb 22, 2009 Eclipse迁移到Github
+    
+    jetty-maven-plugin捐献给Eclipse
+    <groupId>org.mortbay.jetty</groupId> --> <groupId>org.eclipse.jetty</groupId>
 
