"Java Handbook - Basic I/O"

--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -50,3 +50,12 @@ tags: [Authority, Model]
     jetty-maven-plugin捐献给Eclipse
     <groupId>org.mortbay.jetty</groupId> --> <groupId>org.eclipse.jetty</groupId>
 
+###2013-09-02
+    任人为贤的劳动力市场：能力越强，赚的越多，机会越多。
+    
+    创业公司为什么应该写博客？
+    1.检验你的idea，同时获得反馈。
+    2.最好的宣传手段之一。
+    
+    launch your own startup
+    
