--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -58,4 +58,28 @@ tags: [Authority, Model]
     2.最好的宣传手段之一。
     
     launch your own startup
+
+###2013-09-25
+    组织工作改革-->量化标准
+
+###2013-09-26
+    世事洞明皆学问，人情练达即文章。
+    美国普通公务员分为十五个等级，每级又分十档。
+    美国公务员工资有三大参考标准，一是人均GDP，二是全国平均工资，三是全国最低保障工资。美国的人均工资，一般保持在人均GDP的百分之八十九，低保标准大致是人均GDP的百分之三十二。高级公务员的薪酬，会高于人均GDP，比如总统工资，高出八点四倍，副总统，高出四点七倍，最高级别的部长，高出四倍，州长高出二点六倍，县长高出一点七倍。而普通公务员，会低于人均GDP，大多数甚至低于全国人均工资。
     
+    立党为公，执政为民，那就是维护程序正义。
+
+###2013-09-27
+    王者伐道，智者伐交，武者伐谋。
+    顺应事物发展的客观规律，这才是王道。
+
+
+
+
+
+
+
+
+
+
+
