"jquery-handbook finished."

--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -73,7 +73,14 @@ tags: [Authority, Model]
     王者伐道，智者伐交，武者伐谋。
     顺应事物发展的客观规律，这才是王道。
 
-
+###2013-09-28
+    周朝建立了礼学体系。
+    秦朝奉行的是法家体系
+    汉朝奉行的是道家体系。
+    唐朝以后，整个社会建立了主流思想体系，也就是家文化，理学体系。
+    孙中山推动了三民主义。
+    共产党建立了共产主义思想体系。
+    
 
 
 
