"ajax handbook finished."

--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -81,7 +81,9 @@ tags: [Authority, Model]
     孙中山推动了三民主义。
     共产党建立了共产主义思想体系。
     
-
+###2013-10-02
+    监督机制问题，权利不受约束，出现狼狈为奸的情形。
+    资本掠夺的四大武器：能源控制，美元控制，武器输出，资本输入。。
 
 
 
