ubuntu-handbook, modify samba configuration

--- a/_posts/others/2013-06-04-notes.md
+++ b/_posts/others/2013-06-04-notes.md
@@ -85,10 +85,16 @@ tags: [Authority, Model]
     监督机制问题，权利不受约束，出现狼狈为奸的情形。
     资本掠夺的四大武器：能源控制，美元控制，武器输出，资本输入。。
 
+###2013-10-31
+    领导能创造神话，管理可持续发展。
+    
+    每个人或部门都要有服务意识，在外企HR，财务等等部门都是服务部门（主动服务）。
 
-
-
-
+###2013-12-03
+    硅谷
+    股票期权奖励
+    一般来讲，一个公司在A轮融资后会按照一定的比例划分出一个专门的期权池(Employee Stock Ownership Plans)用以奖励员工。
+    公司IPO之后，一般会推出另外一种形式的激励计划，也就是我们通常所说的“员工股票购买计划”，让员工以折扣价格购买公司股票；或者，在给员工发薪水的时候，将一定比例的薪水折算成股票。
 
 
 
